--- a/css/queries.sass
+++ b/css/queries.sass
@@ -4,12 +4,12 @@
             display: none !important
         
         .hamburger-menu 
-            display: flex !important
+            display: flex 
 
 
     .section-1
         .d-grid
-            grid-template-columns: 1fr !important
+            grid-template-columns: 1fr
             grid-row-gap: 30px
 
     .section-3
@@ -29,3 +29,32 @@
 
         .column-1, .column-2
             margin-bottom: 2.5rem
+
+@media screen and ( max-width: 590px ) 
+    .header 
+        h1 
+            font-size: 2.1rem !important
+
+        p 
+            margin: 1.2rem 0 1.7rem 0 !important
+
+    p 
+        br
+            display: none
+    
+
+@media screen and ( max-width: 500px )
+    .header
+        height: 100vh
+        
+    .section-1, .section-3 
+        padding: 5vh 0
+
+    .section-2 
+        padding: 5vh 0 13vh 0
+
+    .footer
+        padding-top: 5vh
+
+        .footer-lower 
+            margin-top: 5vh
